--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build-client": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build-client",
-    "server": "nodemon --exec ts-node server.ts",
+    "server": "nodemon --exec ts-node server.ts --ignore client",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\"",
     "test": "jest",
