--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "api-sherlock",
   "version": "1.0.0",
   "description": "#### Track and Manage Your Apis",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
     "install-server": "npm install",
     "install-dependencies": " npm run install-client && npm run install-server ",
@@ -13,6 +13,8 @@
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\"",
     "test": "jest",
+    "test-handles": "jest --detectOpenHandles",
+    "test-watch": "jest --watchAll --detectOpenHandles",
     "lint": "eslint ./"
   },
   "keywords": [],
@@ -22,6 +24,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
@@ -32,8 +35,9 @@
     "eslint": "^8.19.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.15",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
@@ -57,5 +61,21 @@
   },
   "engines": {
     "node": "16.x"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
+    "preset": "ts-jest",
+    "coverageDirectory": "./coverage",
+    "testMatch": [
+      "**/?(*.)+(test).ts"
+    ],
+    "resetMocks": true,
+    "clearMocks": true,
+    "setupFiles": [
+      "./jest/setEnvVars.ts"
+    ]
   }
 }
