--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.15.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "@types/prop-types": "^15.7.5",
@@ -14,7 +11,9 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.24.0",
     "history": "^5.1.0",
+    "http-status-codes": "^2.2.0",
     "moment": "^2.29.1",
+    "msw": "^0.44.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
@@ -25,15 +24,31 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^9.0.7",
-    "recharts": "^2.1.8",
+    "recharts": "^2.1.13",
     "styled-components": "^5.3.3",
     "typescript": "^4.7.4",
     "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/user-event": "^14.3.0",
+    "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-plugin-jest": "^26.6.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-testing-library": "^5.5.1",
+    "match-sorter": "^6.3.1",
+    "ts-jest": "^28.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "CI= react-scripts build",
     "test": "react-scripts test",
+    "test2": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint ./"
   },
@@ -55,12 +70,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "eslint": "^8.20.0",
-    "eslint-plugin-react": "^7.30.1"
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
+    ]
   }
 }
