--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,12 +8,12 @@
     "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
-    // "noImplicitAny": true,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
@@ -21,8 +21,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "jsx": "preserve",
+    "baseUrl": "./src",
+    "jsx": "react-jsx",
     "typeRoots": ["./types", "@types", "./node_modules/@types"]
   },
   "exclude": ["node_modules"],
