--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build-client": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build-client",
-    "server": "nodemon --exec ts-node server.ts --ignore client",
+    "server": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
     "client": "npm start --prefix client",
     "start": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\"",
     "test": "jest",
@@ -28,17 +28,18 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.4",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "concurrently": "^6.4.0",
     "eslint": "^8.19.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.15",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.8.2",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -67,15 +68,24 @@
     "coveragePathIgnorePatterns": [
       "/node_modules/"
     ],
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "./tsconfig.json"
+      }
+    },
     "preset": "ts-jest",
     "coverageDirectory": "./coverage",
     "testMatch": [
       "**/?(*.)+(test).ts"
     ],
+    "modulePaths": [
+      "<rootDir>",
+      "src"
+    ],
     "resetMocks": true,
     "clearMocks": true,
     "setupFiles": [
-      "./jest/setEnvVars.ts"
+      "./src/test/setEnvVars.ts"
     ]
   }
 }
