--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
+    "lib": ["es6", "es2017", "esnext.asynciterable"],
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
-    "noImplicitAny": true,
+    "noImplicitAny": true, //
     "strictNullChecks": true,
     "strictFunctionTypes": true,
     "noImplicitThis": true,
@@ -21,9 +21,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "typeRoots": ["./types", "@types", "./node_modules/@types"]
+    "typeRoots": ["src/types", "src/@types", "./node_modules/@types"],
+    "baseUrl": "src"
   },
   "exclude": ["node_modules"],
-  "include": ["./**/*.ts"]
+  "include": ["src/**/*.ts", "xss-clean.d.ts"]
 }
