--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -23,7 +23,15 @@
   "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
     "camelcase": "off",
-    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-explicit-any": 1,
+    "@typescript-eslint/no-restricted-imports": [
+      "warn",
+      {
+        "name": "react-redux",
+        "importNames": ["useSelector", "useDispatch"],
+        "message": "Use typed hooks `useAppDispatch` and `useAppSelector` instead."
+      }
+    ],
     "no-shadow": 0,
     "no-console": 0,
     "react/jsx-key": 1,
