--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.24.0",
+    "case": "^1.6.3",
+    "change-case": "^4.1.2",
     "history": "^5.1.0",
     "http-status-codes": "^2.2.0",
     "moment": "^2.29.1",
@@ -42,6 +44,7 @@
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-testing-library": "^5.5.1",
     "match-sorter": "^6.3.1",
+    "resize-observer-polyfill": "^1.5.1",
     "ts-jest": "^28.0.7"
   },
   "scripts": {
@@ -74,5 +77,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
