--- a/client/package.json
+++ b/client/package.json
@@ -36,9 +36,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.3.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
+    "buffer": "^6.0.3",
     "eslint": "^8.20.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-react": "^7.30.1",
