--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.ts",
   "scripts": {
     "server": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
-    "server-prod": "ts-node -r tsconfig-paths/register src/server.ts --ignore client",
+    "watch": "tsc -w",
+    "server-prod": "node dist/server.js",
+    "server-watch": "concurrently --kill-others-on-fail \" npm run server\" \" npm run watch\"",
     "test": "jest",
     "test-handles": "jest --detectOpenHandles",
     "test-watch": "jest --watchAll --detectOpenHandles",
