--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "history": "^5.1.0",
     "http-status-codes": "^2.2.0",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "msw": "^0.44.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
