--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,13 @@
   "description": "#### Track and Manage Your Apis",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
     "watch": "tsc -w",
     "server-prod": "NODE_PATH=./dist node ./dist/server.js",
-    "server-watch": "concurrently --kill-others-on-fail \" npm run server\" \" npm run watch\"",
-    "test": "jest",
+    "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "test": "jest --watchAll --detectOpenHandles",
     "test-handles": "jest --detectOpenHandles",
-    "test-watch": "jest --watchAll --detectOpenHandles",
+    "test-only": "jest --watchAll --detectOpenHandles",
     "lint": "eslint ./"
   },
   "keywords": [],
@@ -18,8 +18,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.18",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
@@ -41,17 +44,20 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^6.0.4",
+    "express-session": "^1.17.3",
     "helmet": "^5.0.1",
     "http-status-codes": "^2.1.4",
+    "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "mongoose": "^6.0.13",
+    "mongoose": "6.5.2",
     "morgan": "^1.10.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
