--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
     "watch": "tsc -w",
     "server-prod": "NODE_PATH=./dist node ./dist/server.js",
-    "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "server-redis": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "server": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "test": "jest --watchAll --detectOpenHandles",
     "test-handles": "jest --detectOpenHandles",
     "test-only": "jest --watchAll --detectOpenHandles",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.18",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
@@ -45,6 +47,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
