--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,10 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
     "dev2": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
     "watch": "tsc -w",
-    "server-prod": "NODE_PATH=./dist node ./dist/server.js",
+    "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
     "server-redis": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "server": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
+    "deploy": "npx webpack --stats-error-details && vercel --prod",
     "test": "jest --watchAll --detectOpenHandles",
     "test-handles": "jest --detectOpenHandles",
     "test-only": "jest",
@@ -40,9 +41,13 @@
     "nodemon": "^2.0.15",
     "supertest": "^6.2.4",
     "ts-jest": "^28.0.7",
+    "ts-loader": "^9.3.1",
     "ts-node": "^10.8.2",
     "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
