--- a/backend/package.json
+++ b/backend/package.json
@@ -8,11 +8,11 @@
     "dev2": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
     "watch": "tsc -w",
     "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
-    "server-redis": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
-    "server": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
+    "server-no-redis": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "deploy": "npx webpack --stats-error-details && vercel --prod",
-    "test": "jest --watchAll --detectOpenHandles",
-    "test-handles": "jest --detectOpenHandles",
+    "test": "concurrently --kill-others-on-fail \" redis-server\" \" jest --watchAll --detectOpenHandles\"",
+    "test-no-redis": "jest --watchAll --detectOpenHandles",
     "test-only": "jest",
     "lint": "eslint ./"
   },
@@ -25,7 +25,6 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.5",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
@@ -52,7 +51,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
-    "connect-redis": "^6.1.3",
+    "bullmq": "^1.90.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -60,7 +59,6 @@
     "express-async-errors": "^3.1.1",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^6.0.4",
-    "express-session": "^1.17.3",
     "helmet": "^5.0.1",
     "http-status-codes": "^2.1.4",
     "ioredis": "^5.2.2",
