--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "case": "^1.6.3",
     "change-case": "^4.1.2",
     "crypto-js": "^4.1.1",
+    "envalid": "^7.3.1",
     "history": "^5.1.0",
     "http-status-codes": "^2.2.0",
     "msw": "^0.44.2",
