refactoring backend tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -8,13 +8,16 @@
     "dev2": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
     "watch": "tsc -w",
     "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
-    "server-no-redis": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "deploy": "npx webpack --stats-error-details && vercel --prod",
-    "test": "concurrently --kill-others-on-fail \" redis-server\" \" jest --watchAll --detectOpenHandles\"",
-    "test-no-redis": "jest --watchAll --detectOpenHandles",
+    "test": "concurrently --kill-others-on-fail \" redis-server\" \" jest \"",
+    "test-watch": "jest --watchAll --detectOpenHandles",
+    "test-only-handles": "jest --detectOpenHandles",
     "test-only": "jest",
-    "lint": "eslint ./"
+    "redis-shutdown": "redis-cli shutdown",
+    "lint": "eslint ./",
+    "prepare": "cd .. && husky install backend/.husky"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +39,7 @@
     "@typescript-eslint/parser": "^5.30.5",
     "concurrently": "^6.4.0",
     "eslint": "^8.19.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.4",
@@ -61,10 +65,12 @@
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^6.0.4",
     "express-validator": "^6.14.2",
+    "get-port": "^5.1.1",
     "helmet": "^5.0.1",
     "http-status-codes": "^2.1.4",
     "ioredis": "^5.2.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.9.1",
     "mongoose": "6.5.2",
     "morgan": "^1.10.0",
     "validator": "^13.7.0",
