editing backend tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,18 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
-    "dev2": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
+    "dev-dist": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
     "watch": "tsc -w",
     "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
     "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "deploy": "npx webpack --stats-error-details && vercel --prod",
-    "test": "concurrently --kill-others-on-fail \" redis-server\" \" jest \"",
+    "test": "jest",
+    "test-handles": "jest --detectOpenHandles",
     "test-watch": "jest --watchAll --detectOpenHandles",
-    "test-only-handles": "jest --detectOpenHandles",
-    "test-only": "jest",
+    "test-redis": "concurrently --kill-others-on-fail \" redis-server\" \" jest \"",
+    "test-mongo": "concurrently --kill-others-on-fail \" brew services start mongodb-community@5.0\" \" jest \"",
+    "test-all": "concurrently --kill-others-on-fail \" redis-server\" \" brew services start mongodb-community@5.0\" \" jest \"",
     "redis-shutdown": "redis-cli shutdown",
     "lint": "eslint ./",
     "prepare": "cd .. && husky install backend/.husky"
