refactoring queue tests

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,17 @@
     "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "deploy": "npx webpack --stats-error-details && vercel --prod",
+    "redis-shutdown": "redis-cli shutdown",
+    "start-mongo": "brew services start mongodb-community@5.0",
+    "stop-mongo": "brew services stop mongodb-community@5.0",
     "test": "jest",
     "test-handles": "jest --detectOpenHandles",
     "test-watch": "jest --watchAll --detectOpenHandles",
-    "test-redis": "concurrently --kill-others-on-fail \" redis-server\" \" jest \"",
-    "test-mongo": "concurrently --kill-others-on-fail \" brew services start mongodb-community@5.0\" \" jest \"",
-    "test-all": "concurrently --kill-others-on-fail \" redis-server\" \" brew services start mongodb-community@5.0\" \" jest \"",
-    "redis-shutdown": "redis-cli shutdown",
+    "test-redis": "concurrently --kill-others-on-fail \" redis-server\" \" jest\"",
+    "test-mongo": "concurrently --kill-others-on-fail \" npm run start-mongo\" \" jest \"",
+    "test-queue": "jest -- monitorQueue.test.ts",
+    "test-redis-system": "concurrently --kill-others-on-fail \" redis-server\" \" jest && npm run redis-shutdown\"",
+    "test-all": "concurrently --kill-others-on-fail \" redis-server\" \" npm run start-mongo\" \" jest && npm run stop-mongo && npm run redis-shutdown \"",
     "lint": "eslint ./",
     "prepare": "cd .. && husky install backend/.husky"
   },
