--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/server.ts --ignore client",
     "dev-dist": "NODE_PATH=./dist nodemon --exec node ./dist/server.js --ignore client",
     "watch": "tsc -w",
-    "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
-    "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
+    "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
+    "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
     "deploy": "npx webpack --stats-error-details && vercel --prod",
     "redis-shutdown": "redis-cli shutdown",
     "start-mongo": "brew services start mongodb-community@5.0",
     "stop-mongo": "brew services stop mongodb-community@5.0",
+    "start-dbs": "npm run start-mongo && redis-server",
     "test": "jest",
     "test-handles": "jest --detectOpenHandles",
     "test-watch": "jest --watchAll --detectOpenHandles",
