--- a/client/package.json
+++ b/client/package.json
@@ -25,13 +25,13 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^5.0.0",
     "react-toastify": "^9.0.7",
     "recharts": "^2.1.13",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "react-scripts": "^5.0.0",
     "@faker-js/faker": "^7.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
@@ -58,7 +58,8 @@
     "test-only": "react-scripts test --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint ./",
-    "husky": "cd .. && husky install client/.husky"
+    "husky": "cd .. && husky install client/.husky",
+    "install-testing": "npm i && npm audit fix --omit=dev"
   },
   "eslintConfig": {
     "extends": [
