--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "@types/prop-types": "^15.7.5",
     "@types/react": "^18.0.15",
@@ -24,36 +25,28 @@
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.0.2",
+    "react-scripts": "^5.0.0",
     "react-toastify": "^9.0.7",
     "recharts": "^2.1.13",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
     "@faker-js/faker": "^7.3.0",
-    "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.3.0",
     "@types/crypto-js": "^4.1.1",
-    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "babel-jest": "^29.0.2",
     "buffer": "^6.0.3",
     "eslint": "^8.20.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.1",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^29.0.2",
-    "react-scripts": "^5.0.0",
-    "react-test-renderer": "^18.2.0",
     "resize-observer-polyfill": "^1.5.1",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
@@ -66,8 +59,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./",
     "husky": "cd .. && husky install client/.husky",
-    "install-testing": "npm i && npm audit fix --omit=dev",
-    "test-jest": "jest"
+    "install-testing": "npm i --no-audit"
   },
   "eslintConfig": {
     "extends": [
@@ -85,6 +77,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
     ]
   },
   "msw": {
