added moduleNameMapper to jest config

--- a/client/package.json
+++ b/client/package.json
@@ -82,7 +82,10 @@
   "jest": {
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
-    ]
+    ],
+    "moduleNameMapper": {
+      "^~(.*)$": "<rootDir>/src$1"
+    }
   },
   "msw": {
     "workerDirectory": "public"
