--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -93,6 +93,11 @@ jobs:
       - name: Pulling git repo
         uses: actions/checkout@v3
 
+      - name: Setup Node.js 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: Building backend webpack
         run: |
           cd backend
