--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -12,7 +12,7 @@ jobs:
       JWT_ACCESS_TOKEN_LIFETIME: ${{secrets.JWT_ACCESS_TOKEN_LIFETIME}}
       JWT_REFRESH_TOKEN_LIFETIME: ${{secrets.JWT_REFRESH_TOKEN_LIFETIME}}
       NODE_ENV: ${{secrets.NODE_ENV}}
-      REDIS_HOST: redis
+      REDIS_HOST: localhost
       REDIS_PORT: 6379
       CORS_ORIGIN: ${{secrets.CORS_ORIGIN}}
       REACT_APP_BASE_URL: ${{secrets.REACT_APP_BASE_URL}}
@@ -22,8 +22,7 @@ jobs:
 
     services:
       redis:
-        image: redis:latest
-        command: ["redis-server", "--bind", "redis", "--port", "6379"]
+        image: redis
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
