--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,6 @@
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
     "@faker-js/faker": "^7.3.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
@@ -47,7 +41,6 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "babel-jest": "^29.0.2",
     "buffer": "^6.0.3",
     "eslint": "^8.20.0",
     "eslint-plugin-jest": "^26.6.0",
@@ -85,6 +78,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
+    ],
+    "moduleNameMapper": {
+      "^~(.*)$": "<rootDir>/src$1"
+    }
   },
   "msw": {
     "workerDirectory": "public"
