changing package.json webpack and vercel scripts

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,8 @@
     "server": "concurrently --kill-others-on-fail \" redis-server\" \" npm run watch\" \" npm run dev\"",
     "server-no-redis": "concurrently --kill-others-on-fail \" npm run watch\" \" npm run dev\"",
     "server-node-path": "NODE_PATH=./dist node ./dist/server.js",
-    "build-vercel": "npx webpack --stats-error-details",
-    "deploy": "npm run build && vercel --prod",
+    "webpack": "npx webpack --stats-error-details",
+    "vercel-deploy": "npm run build && vercel --prod",
     "redis-shutdown": "redis-cli shutdown",
     "start-mongo": "brew services start mongodb-community@5.0",
     "stop-mongo": "brew services stop mongodb-community@5.0",
