--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,7 +10,8 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:jest/recommended",
     "plugin:jest/style",
-    "plugin:testing-library/react"
+    "plugin:testing-library/react",
+    "plugin:react-hooks/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
