--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@svgr/webpack": "^6.3.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.3.0",
@@ -51,6 +52,9 @@
     "resize-observer-polyfill": "^1.5.1",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
+  },
+  "overrides": {
+    "@svgr/webpack": "$@svgr/webpack"
   },
   "scripts": {
     "start": "react-scripts start",
