--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,8 @@
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "buffer": "^6.0.3",
+    "esbuild": "^0.15.10",
+    "esbuild-jest": "^0.5.0",
     "eslint": "^8.20.0",
     "eslint-plugin-jest": "^26.6.0",
     "eslint-plugin-react": "^7.30.1",
@@ -86,6 +88,11 @@
     ]
   },
   "jest": {
+    "transform": {
+      "^.+\\.(t|j)sx?$": [
+        "esbuild-jest"
+      ]
+    },
     "transformIgnorePatterns": [
       "node_modules/(?!@ngrx|(?!deck.gl)|ng-dynamic)"
     ],
